Allocate memory in smaller chunks for chrome://memory-exhaust/

The memory-exhaustion loop could cause DbgHelp's SymFromAddr() to hang
in certain build configs (32-bit Windows Clang debug builds), causing
MetricsServiceBrowserTest.OOMRenderers to hang while generating the
backtrace after the OOM exception. Reducing the allocation size seems to
help.

BUG=692564
TBR=jochen

Review-Url: https://codereview.chromium.org/2882513003
Cr-Commit-Position: refs/heads/master@{#471138}

Former-commit-id: 7cf2f122818ad39afafea382ecf2a6cee9d350fd